# nuzo_lang

./: .editorconfig  .gitignore  .lefthook.yml  CALL_GRAPH.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  audit.toml  justfile  nuzo.toml.example  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  perf-regression.yml  playground-pages.yml
benches/: bench_gc.rs  bench_perf_regression.rs  bench_signal.rs  bench_vm_branch_predict.rs  nuzo_vs_py_fair.rs
benchmarks/baseline/: 1e53d39.json  53bbe25.json  835f3ef.json  (+1 more)
crates/nuzo-bytecode/: .gitignore  Cargo.toml  build.rs
crates/nuzo-bytecode/src/: constants.rs  lib.rs  opcode.rs  scope.rs  serialization.rs
crates/nuzo-class/: .gitignore  Cargo.toml
crates/nuzo-class-macros/: .gitignore  Cargo.toml
crates/nuzo-class-macros/src/: lib.rs
crates/nuzo-class-macros/tests/: compile_errors.rs
crates/nuzo-class-macros/tests/ui/: class_unknown_arg.rs  class_unknown_arg.stderr  constructor_bad_return.rs  constructor_bad_return.stderr  getter_no_self.rs  getter_no_self.stderr  getter_skip_all.rs  getter_skip_all.stderr  multiple_attrs.rs  multiple_attrs.stderr  setter_bad_self.rs  setter_bad_self.stderr  static_with_self.rs  static_with_self.stderr
crates/nuzo-class/examples/: bank_account.rs  person.rs
crates/nuzo-class/src/: lib.rs
crates/nuzo-class/tests/: integration_test.rs
crates/nuzo-codegen/: .gitignore  Cargo.toml
crates/nuzo-codegen/src/: builtin_gen.rs  dispatch_gen.rs  lib.rs  opcode_gen.rs  py_test.rs
crates/nuzo-compiler/: .gitignore  Cargo.toml
crates/nuzo-compiler/attic/_deprecated/: README.md  control_stack.rs  expressions.rs  functions.rs  helpers.rs  lsra.rs  macros.rs  patch_list.rs  scope_management.rs  statements.rs  string_intern.rs
crates/nuzo-compiler/examples/: dump_bytecode.rs
crates/nuzo-compiler/src/: allocator.rs  builder.rs  codegen.rs  compiler.rs  error.rs  lib.rs  peephole_tests.rs  prelude.rs  reg_manager.rs  reg_pool.rs  usage_counter.rs  value_tracker.rs
crates/nuzo-compiler/tests/: perf_codegen.rs
crates/nuzo-config/: Cargo.toml
crates/nuzo-config/src/: config.rs  error.rs  lib.rs  source.rs  toml_parser.rs  value.rs
crates/nuzo-core/: .gitignore  Cargo.toml
crates/nuzo-core/src/: constants.rs  encoding.rs  error.rs  hash.rs  lib.rs  prelude.rs  source_location.rs  tag.rs  value.rs
crates/nuzo-error/: Cargo.toml
crates/nuzo-error/src/: classifier.rs  collector.rs  diagnostic.rs  formatter.rs  lib.rs  renderer.rs  similar.rs  sink.rs  smart_types.rs  types.rs
crates/nuzo-frontend/: .gitignore  Cargo.toml
crates/nuzo-frontend/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/nuzo-gui/: Cargo.toml
crates/nuzo-gui/src/: context.rs  layout.rs  lib.rs  theme.rs  widgets.rs
crates/nuzo-helpers/: Cargo.toml
crates/nuzo-helpers/src/: array.rs  builtins.rs  convert.rs  debug.rs  io.rs  lib.rs  math.rs  string.rs  sys.rs  time.rs  validation.rs
crates/nuzo-ir/: .gitignore  Cargo.toml
crates/nuzo-ir/examples/: demo_ir_errors.rs
crates/nuzo-ir/src/: builder.rs  display.rs  error.rs  lib.rs  module_resolver.rs  optimize.rs  types.rs
crates/nuzo-opcode/: .gitignore  Cargo.toml
crates/nuzo-opcode/src/: lib.rs
crates/nuzo-playground-wasm/: Cargo.toml
crates/nuzo-playground-wasm/src/: lib.rs
crates/nuzo-proc/: Cargo.toml
crates/nuzo-proc-core/: .gitignore  Cargo.toml
crates/nuzo-proc-core/src/: attr.rs  crate_meta.rs  diag.rs  discover.rs  doc_sync.rs  error_kind.rs  expr_visitor_derive.rs  hardcode.rs  lib.rs  match_sync.rs  nuzo.rs  opcode_sync_derive.rs  parse_utils.rs  path.rs  test_attr.rs  token.rs  trace_derive.rs  validate.rs
crates/nuzo-proc-core/src/hardcode/: env.rs  export.rs  registry.rs  types.rs  validate.rs
crates/nuzo-proc-core/tests/: auto_register.rs
crates/nuzo-proc/src/: lib.rs
crates/nuzo-run/: .gitignore  Cargo.toml
crates/nuzo-run/src/: bench.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  output.rs  output_sink.rs  plugin.rs  prelude.rs  session.rs  test_harness.rs
crates/nuzo-signal/: Cargo.toml
crates/nuzo-signal/src/: bus.rs  error.rs  lib.rs  log.rs  signal.rs  slot.rs  slot_stats.rs  types.rs
crates/nuzo-signal/tests/: signal_tests.rs
crates/nuzo-values/: .gitignore  Cargo.toml
crates/nuzo-values/src/: constants.rs  context.rs  errors.rs  function.rs  generic.rs  heap.rs  inspector.rs  layout.rs  lib.rs  nuzo_dict.rs  prelude.rs  tag_registry.rs  traits.rs  turboslab.rs  value.rs
crates/nuzo-values/src/generic/: any_map.rs  const_array.rs  functional.rs  hlist.rs
crates/nuzo-values/src/turboslab/: cache.rs  cpu_cache.rs  remote_free.rs  slab.rs
crates/nuzo-vm/: .gitignore  Cargo.toml
crates/nuzo-vm/src/: arena.rs  builtin_registration.rs  cache.rs  call_dispatch.rs  dispatch.rs  dispatch_table.rs  elastic_register_file.rs  frame_paging.rs  frame_v6.rs  gc.rs  lib.rs  object.rs  prelude.rs  tracer_state.rs  trf.rs  variable_ops.rs  vm.rs  vm_hot_trace.rs  vm_lic.rs  vm_tests.rs  zero_unbox.rs
crates/nuzo-vm/src/dispatch/: cache_types.rs  calls.rs  capture.rs  cold_path.rs  control_flow.rs  globals.rs  heap_ops.rs  helpers.rs  index_ops.rs  property.rs  tail_call.rs
crates/nuzo-vm/src/gc/: alloc.rs  heap.rs  mark.rs  sweep.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  SCHF_V6_SPEC.md  SUMMARY.md  auto-macro-development-report.md  coverage_gaps.md  development-guide.md  language-spec.md  opcode-reference.md  specs-three-todos-prod-checklist.md  specs-three-todos-prod-spec.md  specs-three-todos-prod-tasks.md  standard-library.md
examples/: phase_bench.rs
playground-web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: _common.py  check_callgraph.ps1  check_callgraph.sh  check_commit_msg.sh  check_heredoc.ps1  sync_opcode.py  sync_tests.py  watch.ps1  watch.sh
src/: lib.rs
tests/: README.md
tools/: perf_cli.py
tools/nuzo-explore/: Cargo.toml  REPORT.md
tools/nuzo-explore/src/: bench.rs  debug_mod.rs  main.rs  minimal.rs  report.rs  tests.rs
(+159 files in other folders)
