[package]
name = "nuzo_helpers"
version.workspace = true
edition.workspace = true
description = "Builtin function registry and implementations for Nuzo"

[dependencies]
nuzo_values.workspace = true
nuzo_core.workspace = true
nuzo_signal.workspace = true
nuzo_proc.workspace = true
nuzo_proc_core = { workspace = true, features = ["proc_macro"] }
nuzo_codegen = { workspace = true }
once_cell.workspace = true
log.workspace = true
web-time.workspace = true
