[package]
name = "nuzo_proc"
version.workspace = true
edition.workspace = true
description = "Nuzo procedural macro entry point"
publish = false

[lib]
proc-macro = true

[dependencies]
nuzo_proc_core = { workspace = true, features = ["proc_macro"] }
nuzo_codegen = { workspace = true }
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
